codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__model_argument_menu_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&state, &session, 80, 24)"
---

  ⎇ main  /workspace

  ❯ inspect this repo

  I’m tracing the relevant data flow.








  ╭─ models ─────────────────────────────────────────────────────────────────╮
  │› Claude Sonnet 4 (current)  Fast coding model                            │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯ /model                                                                 │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  ↑/↓:navigate  │  Tab:complete  │  Esc:close
