codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__model_effort_argument_menu_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this repo


  I’m tracing the relevant data flow.



  ╭─ reasoning effort ───────────────────────────────────────────────────────╮
  │› xhigh           Extended reasoning                                      │
  │  high (active)   Heavy reasoning                                         │
  │  medium          Balanced reasoning                                      │
  │  low             Faster, lighter reasoning                               │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯ /model anthropic/claude-sonnet-4                                       │
  ╰───────────────────────────────────── claude-sonnet-4 (high) · workspace ─╯

  ↑/↓:navigate  │  Tab:complete  │  Esc:close
