codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__model_picker_snapshot_and_effort_selection.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this r┌─ Pick model ─────────────────────────[×]─┐
                  │                                          │
                  │  Search:                                 │
  I’m tracing the │                                          │
                  │  ❯ Claude Sonnet 4 · Anthropic (curren   │
                  │                                          │
                  │                                          │
                  │                                          │
                  │                                          │
                  │                                          │
                  │                                          │
                  │                                          │
                  │                                          │
                  │                                          │
  ╭───────────────│  ↑/↓ navigate · Enter select · Esc back  │───────────────╮
  │ ❯             └──────────────────────────────────────────┘               │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯
