codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__multiline_prompt_surface_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this repo


  I’m tracing the relevant data flow.







  ◇ Working

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯ first line                                                             │
  │ second line                                                              │
  ╰──────────────────────────────── claude-sonnet-4 · workspace · multiline ─╯

  Shift+Enter:queue  │  Shift+Tab:mode  │  Ctrl+.:shortcuts
