codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__new_session_confirmation_surface_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this repo


  I’m tracing the relevant data flow.










  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯ keep this draft                                                        │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Ctrl+N:press again to new
