codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__permissions_approval_surface.snap
---
source: astral-tui/src/surface_tests.rs
expression: "request_surface(json!({\n    \"method\": \"item/permissions/requestApproval\", \"id\": \"permissions-1\",\n    \"params\":\n    {\n        \"threadId\": \"thread-1\", \"turnId\": \"turn-1\", \"itemId\": \"call-1\",\n        \"environmentId\": null, \"startedAtMs\": 102, \"cwd\": \"/workspace\",\n        \"reason\": \"read generated files\", \"permissions\":\n        {\n            \"network\": {\"enabled\": true}, \"fileSystem\":\n            { \"read\": [\"/workspace/generated\"], \"write\": null }\n        }\n    }\n}), \"\")"
---
❯ inspect this repo

I’m tracing the relevant data flow.






◇ Action required
  Permissions · read generated files
  [y] allow turn · [a] allow session · [n] deny
