codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__plan_command_menu_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this repo


  I’m tracing the relevant data flow.





  ╭─ commands ───────────────────────────────────────────────────────────────╮
  │› /plan           Switch mode and optionally start a planning task        │
  │  /plugins        Browse plugins                                          │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯ /plan                                                                  │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  ↑/↓:navigate  │  Tab:complete  │  Esc:close
