codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__prompt_history_browse_surface_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this repo


  I’m tracing the relevant data flow.






  ╭─ history ──────────────────────────────────────────────────────────────1─╮
  │› inspect this repo                                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯ inspect this repo                                                      │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  ↑/↓:navigate  │  PgUp/PgDn:page  │  Enter:select  │  Esc:cancel
