codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__queued_follow_ups_surface_snapshot.snap
---
source: astral-tui/src/surface_tests.rs
expression: "render_at_size(&mut state, &session, 80, 24)"
---

  ⎇ main  /workspace


  › inspect this repo


  I’m tracing the relevant data flow.





  #1 Run the focused tests after this finishes
  #2 Summarize the result (+1 line)

  ◇ Working · 2 queued

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                        │
  ╰──────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Enter:queue  │  Shift+Tab:mode  │  Ctrl+.:shortcuts
