codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__replayed_reasoning_preserves_surface_order.snap
---
source: astral-tui/src/surface_tests.rs
expression: rendered
---

  ⎇ main  /workspace


  › make a plan


  ◆ Thought

  I will draft the plan.

  ◆ Todos
    Keep the order visible.
  ▶ Trace order

  ◆ Thought

  The plan is ready.






  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                            │
  ╰──────────────────────────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Shift+Tab:mode  │  Ctrl+.:shortcuts
