codex-rs/astral-tui/src/snapshots/astral_tui__surface__tests__reused_provider_item_ids_preserve_turn_order.snap
---
source: astral-tui/src/surface_tests.rs
expression: rendered
---

  ⎇ main  /workspace


  › first question


  ◆ Thought

  first response

  Worked for 2.0s


  › second question


  ◆ Thought

  second response

  Worked for 2.0s







  ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
  │ ❯                                                                                                                                   │
  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────── claude-sonnet-4 · workspace ─╯

  Shift+Tab:mode  │  Ctrl+.:shortcuts
